fix(mobile): resolve mobile backend connectivity, bind vite to 0.0.0.0, dynamic hostname resolution, and cors preflight